src/objects/CS_Error_Logs__c.object
<CustomObject>
    <description>Error Object to  log the exceptions</description>
    <fields>
        <fullName>CS_Called_Method__c</fullName>
        <label>Called Method</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_Error_Message__c</fullName>
        <description>** Error Message ****</description>
        <label>Error Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CS_Object_Name__c</fullName>
        <description>**** Object Name *****</description>
        <label>Object Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_Record_Id__c</fullName>
        <description>*** Error  Record ID *******</description>
        <label>Record Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>user for error occurred</description>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Error_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Error Log</label>
    <listViews>
        <fullName>All</fullName>
        <columns>CS_Error_Message__c</columns>
        <columns>CS_User__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>CS_Called_Method__c</columns>
        <columns>CS_Object_Name__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>Err-{000000}</displayFormat>
        <label>Error Logs Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Error Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>